src/trusted/validator_arm/testdata/bad/invalid_direct_branches.valerr

validate: error: Branch to trampoline does not target a valid entry point:
     20004:	eafffff6 		b	1ffe4


validate: error: Branch to trampoline does not target a valid entry point:
     2000c:	ebffbffc 		bl	10004


validate: error: Branch into unprotected constant pool:
	   20010:	eb000003 		bl	20024


validate: error: Branch into unprotected constant pool:
	   20014:	ea000001 		b	20020


validate: error: Branch into unprotected constant pool:
	   20018:	eb000003 		bl	2002c


validate: error: Branch into unprotected constant pool:
	   2001c:	ea000001 		b	20028

